--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,113 +1,93 @@
-name: RDP
+name: Kali-RDP-Demo
 
 on:
   workflow_dispatch:
 
 jobs:
-  secure-rdp:
-    runs-on: windows-latest
-    timeout-minutes: 3600
+  kali-rdp:
+    runs-on: ubuntu-latest
+    timeout-minutes: 180
 
     steps:
-      - name: Configure Core RDP Settings
-        run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
-                             -Name "fDenyTSConnections" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "UserAuthentication" -Value 0 -Force
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
-                             -Name "SecurityLayer" -Value 0 -Force
+      - name: Checkout (optional)
+        uses: actions/checkout@v4
 
-          # Remove any existing rule with the same name to avoid duplication
-          netsh advfirewall firewall delete rule name="RDP-Tailscale"
-          
-          # For testing, allow any incoming connection on port 3389
-          netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389
-
-          # (Optional) Restart the Remote Desktop service to ensure changes take effect
-          Restart-Service -Name TermService -Force
-
-      - name: Create RDP User with Secure Password
+      - name: Install Docker CLI & start Docker (if not present)
         run: |
-          Add-Type -AssemblyName System.Security
-          $charSet = @{
-              Upper   = [char[]](65..90)      # A-Z
-              Lower   = [char[]](97..122)     # a-z
-              Number  = [char[]](48..57)      # 0-9
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126)) # Special characters
-          }
-          $rawPassword = @()
-          $rawPassword += $charSet.Upper | Get-Random -Count 4
-          $rawPassword += $charSet.Lower | Get-Random -Count 4
-          $rawPassword += $charSet.Number | Get-Random -Count 4
-          $rawPassword += $charSet.Special | Get-Random -Count 4
-          $password = -join ($rawPassword | Sort-Object { Get-Random })
-          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-          
-          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
-          
-          if (-not (Get-LocalUser -Name "RDP")) {
-              Write-Error "User creation failed"
-              exit 1
-          }
+          sudo apt-get update -y
+          sudo apt-get install -y docker.io
+          sudo systemctl start docker
+          sudo usermod -aG docker $USER || true
+          docker --version
 
-      - name: Install Tailscale
+      - name: Pull Kali image
         run: |
-          $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
-          $installerPath = "$env:TEMP\tailscale.msi"
-          
-          Invoke-WebRequest -Uri $tsUrl -OutFile $installerPath
-          Start-Process msiexec.exe -ArgumentList "/i", "`"$installerPath`"", "/quiet", "/norestart" -Wait
-          Remove-Item $installerPath -Force
+          docker pull kalilinux/kali-rolling:latest
 
-      - name: Establish Tailscale Connection
+      - name: Run Kali container with systemd (privileged)
+        id: start_container
         run: |
-          # Bring up Tailscale with the provided auth key and set a unique hostname
-          & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
-          
-          # Wait for Tailscale to assign an IP
-          $tsIP = $null
-          $retries = 0
-          while (-not $tsIP -and $retries -lt 10) {
-              $tsIP = & "$env:ProgramFiles\Tailscale\tailscale.exe" ip -4
-              Start-Sleep -Seconds 5
-              $retries++
-          }
-          
-          if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
-              exit 1
-          }
-          echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-      
-      - name: Verify RDP Accessibility
-        run: |
-          Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-          
-          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
-              exit 1
-          }
-          Write-Host "TCP connectivity successful!"
+          CONTAINER_NAME="kali-rdp-gh-${{ github.run_id }}"
+          # create & start container with systemd so we can use apt/systemctl inside
+          docker run -d --name "$CONTAINER_NAME" \
+            --privileged \
+            --tmpfs /run --tmpfs /run/lock \
+            -v /sys/fs/cgroup:/sys/fs/cgroup:ro \
+            kalilinux/kali-rolling:latest /sbin/init
+          echo "container=$CONTAINER_NAME" >> $GITHUB_OUTPUT
 
-      - name: Maintain Connection
+      - name: Wait for container to be ready
         run: |
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Address: $env:TAILSCALE_IP"
-          Write-Host "Username: RDP"
-          Write-Host "Password: $(echo $env:RDP_CREDS)"
-          Write-Host "==================`n"
-          
-          # Keep runner active indefinitely (or until manually cancelled)
-          while ($true) {
-              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
-              Start-Sleep -Seconds 300
-          }
+          CONTAINER_NAME="${{ steps.start_container.outputs.container }}"
+          for i in {1..20}; do
+            if docker exec "$CONTAINER_NAME" systemctl is-system-running --quiet; then
+              echo "systemd running in container"
+              break
+            fi
+            echo "waiting for container systemd... ($i)"
+            sleep 3
+          done
+
+      - name: Prepare Kali inside container (install xrdp, create user)
+        run: |
+          CONTAINER="${{ steps.start_container.outputs.container }}"
+          docker exec -u root $CONTAINER bash -lc "export DEBIAN_FRONTEND=noninteractive
+            apt-get update -y && apt-get install -y xrdp sudo passwd
+            # Create user RDP with random strong password
+            PASS=\$(tr -dc 'A-Za-z0-9!@#%^&*()_+-=' </dev/urandom | head -c 20)
+            useradd -m -s /bin/bash RDP || true
+            echo \"RDP:\$PASS\" | chpasswd
+            usermod -aG sudo RDP
+            # enable and start xrdp
+            systemctl enable xrdp
+            systemctl restart xrdp
+            # print credentials to file for action logs (masked via output secret recommendation)
+            echo \"RDP_USER=RDP\" >> /tmp/rdp_creds
+            echo \"RDP_PASS=\$PASS\" >> /tmp/rdp_creds
+            chmod 600 /tmp/rdp_creds
+          "
+          docker cp $CONTAINER:/tmp/rdp_creds rdp_creds || true
+          echo "RDP_CREDS<<EOF" >> $GITHUB_ENV
+          cat rdp_creds >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          rm -f rdp_creds
+
+      - name: Show how to connect (container IP)
+        run: |
+          CONTAINER="${{ steps.start_container.outputs.container }}"
+          # Get container IP on docker network
+          IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $CONTAINER)
+          echo "KALI_CONTAINER_IP=$IP" >> $GITHUB_ENV
+          echo "To connect (from runner network): $IP:3389"
+          echo "RDP user: $RDP_USER (password in RDP_CREDS env)"
+
+      - name: Keep workflow alive for manual testing (short)
+        run: |
+          echo "Container: ${{ steps.start_container.outputs.container }}"
+          echo "Kali IP: $KALI_CONTAINER_IP"
+          echo "RDP credentials are in RDP_CREDS environment variable."
+          # keep alive for a limited time (example: 30 minutes) — change as needed
+          for i in {1..30}; do
+            echo "alive: $i/30 - $(date)"
+            sleep 60
+          done
